Added home page and initial psuedo code of what needs to go on each page

--- a/SeniorDesignWebsite/src/app/components/sidebar/sidebar.component.html
+++ b/SeniorDesignWebsite/src/app/components/sidebar/sidebar.component.html
@@ -1,36 +1,31 @@
 <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; height: 100vh;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+    <a routerLink="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
         <i class="fa-solid fa-microchip fa-3x"></i>
         <span class="fs-4" style="margin-left: 1rem;">Group 18 Senior Design Project 2023</span>
     </a>
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
-        <li class="nav-item">
-            <a href="#" class="nav-link active" aria-current="page">
-                <i class="fa-solid fa-house-chimney" style="margin-right: 0.5rem;"></i>
-                Home
-            </a>
-        </li>
         <li>
-            <a href="#" class="nav-link text-white">
+            <a class="nav-link text-white" routerLink="/about" routerLinkActive="active">
                 <i class="fa-solid fa-address-card" style="margin-right: 0.5rem;"></i>
                 About
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link text-white">
+            <a class="nav-link text-white" routerLink="/sd1-documentation" routerLinkActive="active">
                 <i class="fa-solid fa-file" style="margin-right: 0.5rem;"></i>
-                Papers
+                SD1 Docs (EEL4914)
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link text-white">
-                <i class="fa-solid fa-video" style="margin-right: 0.5rem;"></i>
-                Video/Demos
+            <a class="nav-link text-white" routerLink="/sd2-documentation" routerLinkActive="active">
+                <i class="fa-solid fa-file" style="margin-right: 0.5rem;"></i>
+                SD2 Docs (EEL4915)
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link text-white">
+            <a href="https://github.com/bvanderzalm/Programmable-Trackpad-Application-Senior-Design-Project" target="_blank"
+                class="nav-link text-white">
                 <i class="fa-solid fa-code-branch" style="margin-right: 0.5rem;"></i>
                 Github
             </a>
