--- a/SeniorDesignWebsite/src/app/views/senior-design-one/senior-design-one.component.html
+++ b/SeniorDesignWebsite/src/app/views/senior-design-one/senior-design-one.component.html
@@ -1,9 +1,28 @@
-<p>Initial Project Description</p>
-
-<p>Block Diagram from EEL4914</p>
-
-<p>Documentation List</p>
-<ul>
-    <li>10 page Divide and Conquer</li>
-    <li>SD1 Final Report</li>
-</ul>
+<div style="margin-top: 3rem;">
+    <h5 style="text-decoration: underline;">Initial Project Description:</h5>
+    <p>
+        On the market today, there exists a subset of a common computer peripheral meant to boost a basic end-user's
+        productivity. This product is the programmable mouse. The concept is simple; it is a computer mouse that contains
+        several extra buttons that the user can map to any shortcut or command which he/she chooses. The added convenience
+        of these extra buttons means that a user can save valuable time when performing common, repetitive tasks. Currently,
+        this type of device only exists for the mouse, but not for the trackpad which has millions of users every day. This
+        is where our project comes in. Our purpose in creating the Programmable Trackpad is to bring this type of technology
+        to the trackpad, for users who prefer to use a trackpad over a mouse. Our trackpad will contain a suite of macro
+        keys and rotary encoders, all of which end users can program themselves. With these, trackpad users will be granted
+        the same convenience and functionality as programmable mouse users in a compact and ergonomic package. This device
+        is intended to completely replace the default trackpad on a traditional laptop.
+    </p>
+    
+    <div style="display: flex; flex-wrap: wrap; margin-top: 3rem;">
+        <img src="../../../assets/touchpad-design-diagram.png" alt="sd1-design-diagram" style="width: 400px;">
+        <img src="../../../assets/sd1-design-sketch.png" alt="sd1-design-sketch" style="width: 600px;">
+    </div>
+    
+    
+    <h5 style="text-decoration: underline; margin-top: 3rem;">Senior Design 1 Documentation:</h5>
+    <ul>
+        <li>10 page Divide and Conquer</li>
+        <li>SD1 Final Report</li>
+    </ul>
+    
+</div>
