--- a/SeniorDesignWebsite/src/app/views/senior-design-one/senior-design-one.component.html
+++ b/SeniorDesignWebsite/src/app/views/senior-design-one/senior-design-one.component.html
@@ -21,8 +21,17 @@
     
     <h5 style="text-decoration: underline; margin-top: 3rem;">Senior Design 1 Documentation:</h5>
     <ul>
-        <li>10 page Divide and Conquer</li>
-        <li>SD1 Final Report</li>
+        <li>
+            <a href="../../../assets/Group18_ Divide and Conquer_v2.pdf" download="Group18_Divide_and_Conquer">
+                10 page Divide and Conquer
+            </a>
+        </li>
+
+        <li>
+            <a href="../../../assets/Group18_120_Page_Final_Report.pdf" download="Group18_SD1_Final_Report">
+                SD1 Final Report
+            </a>
+        </li>
     </ul>
     
 </div>
