Added download icon

--- a/SeniorDesignWebsite/src/app/views/senior-design-one/senior-design-one.component.html
+++ b/SeniorDesignWebsite/src/app/views/senior-design-one/senior-design-one.component.html
@@ -20,13 +20,19 @@
     <ul>
         <li>
             <a href="../../../assets/Group18_ Divide and Conquer_v2.pdf" download="Group18_Divide_and_Conquer">
-                10 page Divide and Conquer
+                <div style="display: flex; align-items: center;">
+                    <span style="margin-right: 5px;">10 Page Divide and Conquer</span>
+                    <i class="fa-solid fa-download"></i>
+                </div>
             </a>
         </li>
 
         <li>
             <a href="../../../assets/Group18_120_Page_Final_Report.pdf" download="Group18_SD1_Final_Report">
-                SD1 Final Report
+                <div style="display: flex; align-items: center;">
+                    <span style="margin-right: 5px;">SD1 Final Report</span>
+                    <i class="fa-solid fa-download"></i>
+                </div>
             </a>
         </li>
     </ul>
