--- a/SeniorDesignWebsite/src/app/views/senior-design-one/senior-design-one.component.html
+++ b/SeniorDesignWebsite/src/app/views/senior-design-one/senior-design-one.component.html
@@ -13,27 +13,28 @@
         is intended to completely replace the default trackpad on a traditional laptop.
     </p>
     <div style="display: flex; flex-wrap: wrap; margin-top: 3rem;">
-        <img src="../../../assets/touchpad-design-diagram.png" alt="sd1-design-diagram" style="width: 400px;">
-        <img src="../../../assets/sd1-design-sketch.png" alt="sd1-design-sketch" style="width: 600px;">
+        <img src="../../../assets/sd1-assets/touchpad-design-diagram.png" alt="sd1-design-diagram" style="width: 400px;">
+        <img src="../../../assets/sd1-assets/sd1-design-sketch.png" alt="sd1-design-sketch" style="width: 600px;">
     </div>
     <h5 style="text-decoration: underline; margin-top: 3rem;">Senior Design 1 Documentation:</h5>
     <ul>
         <li>
-            <a href="../../../assets/Group18_ Divide and Conquer_v2.pdf" download="Group18_Divide_and_Conquer">
-                <div style="display: flex; align-items: center;">
-                    <span style="margin-right: 5px;">10 Page Divide and Conquer</span>
+            <div style="display: flex; align-items: center;">
+                <a href="../../../assets/sd1-assets/Group18_ Divide and Conquer_v2.pdf" download="Group18_Divide_and_Conquer"
+                    style="margin-right: 5px;">
+                    10 Page Divide and Conquer
                     <i class="fa-solid fa-download"></i>
-                </div>
-            </a>
+                </a>
+            </div>
         </li>
-
         <li>
-            <a href="../../../assets/Group18_120_Page_Final_Report.pdf" download="Group18_SD1_Final_Report">
-                <div style="display: flex; align-items: center;">
-                    <span style="margin-right: 5px;">SD1 Final Report</span>
+            <div style="display: flex; align-items: center;">
+                <a href="../../../assets/sd1-assets/Group18_120_Page_Final_Report.pdf" download="Group18_SD1_Final_Report"
+                    style="margin-right: 5px;">
+                    SD1 Final Report
                     <i class="fa-solid fa-download"></i>
-                </div>
-            </a>
+                </a>
+            </div>
         </li>
     </ul>
 </div>
