--- a/SeniorDesignWebsite/src/app/components/sidebar/sidebar.component.html
+++ b/SeniorDesignWebsite/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; height: 100vh;">
     <a routerLink="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
         <i class="fa-solid fa-microchip fa-3x"></i>
-        <span class="fs-4" style="margin-left: 1rem;">Group 18 Senior Design Project 2023</span>
+        <span class="fs-8" style="margin-left: 1rem;">Group 18 Programmable Trackpad - Senior Design Project 2023</span>
     </a>
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
