Fixed issue with downloading files and styling changes

--- a/SeniorDesignWebsite/src/app/views/senior-design-one/senior-design-one.component.html
+++ b/SeniorDesignWebsite/src/app/views/senior-design-one/senior-design-one.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 3rem;">
+<div style="margin-top: 3rem; max-height: 95dvh; overflow-y: scroll;">
     <h5 style="text-decoration: underline;">Initial Project Description:</h5>
     <p>
         On the market today, there exists a subset of a common computer peripheral meant to boost a basic end-user's
