--- a/SeniorDesignWebsite/src/app/components/sd2-documentation/sd2-documentation.component.html
+++ b/SeniorDesignWebsite/src/app/components/sd2-documentation/sd2-documentation.component.html
@@ -1,5 +1,5 @@
-<div>
-    <h5 style="text-decoration: underline; margin-top: 3rem;">Senior Design 2 Documentation:</h5>
+<div style="margin-top: 3rem; max-height: 95dvh; overflow-y: scroll;">
+    <h5 style="text-decoration: underline;">Senior Design 2 Documentation:</h5>
     <ul>
         <li>
             <a href="../../../assets/sd2-assets/Group18_8_Page_Conference_Paper.pdf" download="Group18_Conference_Paper"
