--- a/SeniorDesignWebsite/src/app/components/sd2-documentation/sd2-documentation.component.html
+++ b/SeniorDesignWebsite/src/app/components/sd2-documentation/sd2-documentation.component.html
@@ -27,12 +27,23 @@
             <!-- Todo -->
             <a download="Group18_Final_Presentation_Slides"
                 style="margin-right: 5px;">
-                Final Presentation Slide
+                Final Presentation Slides
                 <i class="fa-solid fa-download"></i>
                 <span style="font-style: italic; font-size: 10px; margin-left: 5px;">
                     (To be Added)
                 </span>
             </a>
+            <ul>
+                <li>
+                    <a target="_blank">
+                        Video Link
+                        <i class="fa-solid fa-video"></i>
+                        <span style="font-style: italic; font-size: 10px; margin-left: 5px;">
+                            (To be Added)
+                        </span>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li>
             <!-- Todo -->
