Added home screen image and description for sd2 pg

--- a/SeniorDesignWebsite/src/app/components/sd2-documentation/sd2-documentation.component.html
+++ b/SeniorDesignWebsite/src/app/components/sd2-documentation/sd2-documentation.component.html
@@ -1,4 +1,18 @@
-<div style="margin-top: 3rem; max-height: 95dvh; overflow-y: scroll;">
+<div style="margin: 3rem; max-height: 95dvh; overflow-y: scroll;">
+    <div style="margin-bottom: 2rem;">
+        <h5 class="text-center" style="text-decoration: underline;">About the Project</h5>
+        <p>
+            Our project, the Programmable Trackpad, is a peripheral device for consumer PCs that behaves like a laptop trackpad,
+            while also including programmable function keys. These functions can be configured by the user through a software
+            interface, allowing the user to customize his/her experience. The intent of the device is to fully replace the user's
+            existing mouse, while also providing functionality that can be found in consumer-level programmable mice or streaming
+            peripherals. While programmable mice do exist on the market currently, there is no standard option for trackpad users
+            who wish to enhance their experience with programmable functions. This is the niche that our product fills. The device
+            interfaces with the user's PC over USB or Bluetooth. The USB connection also allows the device to charge its
+            rechargeable battery. This flexibility makes the device convenient for all PC users, regardless of whether they prefer
+            wired or wireless connections.
+        </p>
+    </div>
     <h5 style="text-decoration: underline;">Senior Design 2 Documentation:</h5>
     <ul>
         <li>
