--- a/SeniorDesignWebsite/src/app/views/home/home.component.html
+++ b/SeniorDesignWebsite/src/app/views/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex h-100 text-center">
+<div class="d-flex text-center" style="max-height: 95dvh; overflow-y: scroll;">
     <main class="px-3" style="justify-content: center; width: 100%; margin-top: 10rem;">
         <h1>Programmable Trackpad - Group 18</h1>
         <p class="lead">UCF Senior Design Project - Spring 2023</p>
@@ -10,5 +10,6 @@
             program these shortcuts themselves with a simple computer application that requires no specialized knowledge. Now, PC
             users who prefer a trackpad can take advantage of the same convenience one would receive from a programmable mouse.
         </p>
+        <img src="../../../assets/home-screen-image.png" alt="final-design" style="width: 30rem;">
       </main>
 </div>
