Added docs, video links, and updated styling

--- a/SeniorDesignWebsite/src/app/views/about/about.component.html
+++ b/SeniorDesignWebsite/src/app/views/about/about.component.html
@@ -44,5 +44,6 @@
             class="col-6" style="min-width: 200px; max-width: 400px;">
         <img src="../../../assets/about-assets/final-application-design.png" alt="application-design"
             class="col-6" style="max-width: 400px;">
+        <img src="../../../assets/home-screen-image.png" alt="final-design" style="width: 25rem; border-radius: 6px; margin-top: 2rem;">
     </div>
 </div>
