--- a/SeniorDesignWebsite/src/app/views/home/home.component.html
+++ b/SeniorDesignWebsite/src/app/views/home/home.component.html
@@ -10,6 +10,6 @@
             program these shortcuts themselves with a simple computer application that requires no specialized knowledge. Now, PC
             users who prefer a trackpad can take advantage of the same convenience one would receive from a programmable mouse.
         </p>
-        <img src="../../../assets/home-screen-image.png" alt="final-design" style="width: 30rem;">
+        <img src="../../../assets/sd2-assets/final-demo-img.png" alt="final-design" style="width: 30rem; border-radius: 6px;">
       </main>
 </div>
