--- a/SeniorDesignWebsite/src/app/components/sd2-documentation/sd2-documentation.component.html
+++ b/SeniorDesignWebsite/src/app/components/sd2-documentation/sd2-documentation.component.html
@@ -46,14 +46,10 @@
             </a>
         </li>
         <li>
-            <!-- Todo -->
-            <a download="Group18_SD2_Final_Report"
+            <a href="../../../assets/sd2-assets/Group18_SD2-120_Page_Final_Report.pdf" download="Group18_SD2_Final_Report"
                 style="margin-right: 5px;">
                 SD2 Final Report
                 <i class="fa-solid fa-download"></i>
-                <span style="font-style: italic; font-size: 10px; margin-left: 5px;">
-                    (To be Added)
-                </span>
             </a>
         </li>
     </ul>
